--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ nav a:focus{
 }
 .card:hover{
     transform: scale(1.03);
-    box-shadow: none;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.644);
 }
 .card__image{
     flex: 0 0 120px;
@@ -198,7 +198,7 @@ justify-content: space-between;
 
 .popularcard:hover{
     transform: scale(1.03);
-    box-shadow: none;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.644)
 }
 
 /* ACTIVITY */
@@ -231,7 +231,8 @@ justify-content: space-between;
 
 }
 .activitycard:hover{
-    transform: scale(1.04)
+    transform: scale(1.04);
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.644)
 }
 .activitycard__image{
     flex: 0 0 350px;
