figure pour les cards + partie activity + filtres

--- a/style.css
+++ b/style.css
@@ -1,88 +1,145 @@
 body{
-    font-family: 'Raleway', sans-serif;
+  font-family: 'Raleway', sans-serif;
 }
 main{ 
-    max-width: 1440px;
-    margin: 0px auto; }
+  max-width: 1440px;
+  margin: 0px auto; }
 /* HEADER */
 
 header{
-    display: flex;
-    flex-wrap: wrap;
-
-    max-width: 1440px;
-    margin: 0px auto;
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 1440px;
+  margin: 0px auto;
 }
 
 .headernav{
-    flex: 1;
-     display: flex;
-    justify-content: flex-end;
-    align-items: center;
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
  nav a{
-    width: 162px;
-    text-align: center;
-    padding-top: 40px;
+  width: 162px;
+  text-align: center;
+  width: 162px;
+  text-align: center;
+  padding-top: 48px;
+
 }
 .signup{
-    color: #0065FC;
-    font-weight: 700;
-    width: 162px;
-    text-align: center;
-    padding-top: 48px;
+  color: #0065FC;
+  font-weight: 700;
+  width: 162px;
+  text-align: center;
+  padding-top: 48px;
 
 }
 .Search_subtitle{
-    display: block;
-    font-weight: 100;
-    font-size: smaller;
+  display: block;
+  font-weight: 100;
+  font-size: smaller;
 }
-a{
-    color: black;
-    text-decoration: none;
+a{   
+  color: black;
+  text-decoration: none;
 }
 nav a:focus{
-    color: #0065FC;
-    border-top: 3px solid#0065FC;
+  color: #0065FC;
+  border-top: 3px solid#0065FC;
 }
 
 /* SEARCH */
  form{
-    display: inline-flex;
-    max-width: 100%;
+  display: inline-flex;
+  max-width: 100%;
  }
  .searchicon{
-    background-color: #F2F2F2;
-    padding: 1rem 1.25rem;
-    border-radius: 1rem 0 0 1rem;
-    text-align: center;
+  background-color: #F2F2F2;
+  padding: 1rem 1.25rem;
+  border-radius: 1rem 0 0 1rem;
+  text-align: center;
  }
  .place_search{
-    border-right: none;
-    border-left: none;
-    border-top: #F2F2F2 1px solid;
-    border-bottom: #F2F2F2 1px solid;
-    padding: 0 1.5rem;
-    box-sizing: border-box;
-    width: 14rem;
-    font-size: 1rem;
-    font-weight: bold;
-    font-family: "Raleway", "Sans serif";
+  border-right: none;
+  border-left: none;
+  border-top: #F2F2F2 1px solid;
+  border-bottom: #F2F2F2 1px solid;
+  padding: 0 1.5rem;
+  box-sizing: border-box;
+  width: 14rem;
+  font-size: 1rem;
+  font-weight: bold;
+  font-family: "Raleway", "Sans serif";
  }
  .search_button{
-    background-color: #0065FC;
-    color: white;
-    font-weight: bold;
-    border: none;
-    border-radius: 0 1rem 1rem 0;
-    padding: 0 1.5rem;
-    font-family: "Raleway", "Sans serif";
-    font-size: 1rem;
- 
-
+  background-color: #0065FC;
+  color: white;
+  font-weight: bold;
+  border: none;
+  border-radius: 0 1rem 1rem 0;
+  padding: 0 1.5rem;
+  font-family: "Raleway", "Sans serif";
+  font-size: 1rem;
  }
 
+/*FITLERS*/
+.filter_title{
+  margin-right: 2rem;
+  margin: 0 2rem 1rem 0;
+  display: flex;
+  align-items: center;
+}
+
+.Search_filters{
+  display: flex;
+  margin-top: 2rem;
+  flex-wrap: wrap;
+}
+.filter{
+  display: flex;
+  align-items: center;
+  margin-right: 2rem;
+  border: 2px solid #d9d9d9;
+  border-radius: 2rem;
+  margin-bottom: 1rem;
+  cursor: pointer;
+  transition-duration: 0.1s;
+  font-weight: bold;
+}
+.filter:hover{
+  background-color:#DEEBFF ;
+}
+.Filter_name{
+  margin: 0 1rem;
+}
+
+.filters_icons{
+  background-color: #DEEBFF;
+  color: #0065FC;
+  border-radius: 100%;
+  height: 3rem;
+  width: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: -2px;
+}
+.info_availability{
+  display: flex;
+  align-items: center;
+}
+.info_availability_icon{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #0065FC;
+  border: 1px solid #d9d9d9;
+  height: 1.5rem;
+  width: 1.5rem;
+  border-radius: 100%;
+  margin-right: 0.5rem;
+}
 /* HOSTING */
 #hosting{
     display: flex;
@@ -91,179 +148,258 @@ nav a:focus{
 }
 
 .hostingmain{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    flex-basis: 100%;
-    background-color: #F2F2F2;
-    border-radius: 10px;
-    padding: 0.6rem 2rem 2rem 2rem;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  flex-basis: 100%;
+  background-color: #F2F2F2;
+  border-radius: 10px;
+  padding: 0.6rem 2rem 2rem 2rem;
 }
 
 .hostingcards{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1.5rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
 }
 
 .card{
-    display: flex;
-    flex-direction: column;
-    flex: 1 0 250px;
-    max-width: 550px;
-    overflow: hidden;
-    background: white;
-    color: black;
-    border-radius: 15px;
-    border: 5px white solid;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.233);
-    transition: 0.3s all ease-in-out
+  flex: 1 0 200px;
+  margin: 0;
+  color: black;
+  border-radius: 20px;
+  overflow: hidden;
+  background-color: white;
+  border: 5px white solid;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.233);
+  transition: 0.2s all ease-in-out
 }
 .card:hover{
-    transform: scale(1.03);
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.644);
+  transform: scale(1.01);
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.644);
 }
 .card__image{
-    flex: 0 0 120px;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+  height: 7rem;
+  object-fit: cover;
+  /* max-width: 100%; */
+  width: 100%;
+  /* max-height: 100%; */
 }
 
 .card__title{
-font-size: 1rem;
-font-weight: bold;
-margin: 0.75rem 0 0.3rem 0.75rem;
+  font-size: 1rem;
+  font-weight: bold;
+  margin: 0.3rem 0 0.3rem 0.75rem;
 }
 .card__price{
-    font-size: 0.9rem;
-    margin: 0 0 0.3em 0.75rem
+  font-size: 0.9rem;
+  margin: 0 0 0.3em 0.75rem
 }
 .card__grade{
-    margin: 0 0 0.3em 0.75rem
+  margin: 0 0 0.3em 0.75rem
 }
 .grade_icon[data-active=true]{
-    color: #0065FC;
+  color: #0065FC;
 }
 .grade_icon[data-active=false]{
-    color: #d1d1d1;
+  color: #d1d1d1;
 }
 
 .show_more{
-    font-weight: bold;
-    margin-top: 2rem;
+  font-weight: bold;
+  margin-top: 2rem;
 }
 
 /* popular */
-
-.hostingpopular{
-    display: flex;
-    flex-wrap: wrap;
-    background-color: #F2F2F2;
-    border-radius: 10px;
-    padding: 0.6rem 2rem 2rem 2rem;
-}
-.popular_cards{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1.5rem;
+.PopularTitle{
+  display: flex;
+  justify-content: space-between
 }
 
 .popularmain{
-justify-content: space-between;
+  background-color: #F2F2F2;
+  border-radius: 10px;
+  padding: 0.6rem 2rem 2rem 2rem;
 }
+.popular_cards{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+}
+.popularcard_content{
+  width: 100%;
+  display: inline-block;
+}
+
 .popularcard{
-    display: flex;
-    flex-direction: row;
-    flex: 1 0 350px;
-    max-width: 440px;
-    overflow: hidden;
-    background: white;
-    color: black;
-    border-radius: 15px;
-    border: 5px white solid;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.233);
-    transition: 0.3s all ease-in-out}
+  display: flex;
+  flex-direction: row;
+  flex: 1 0 250px;
+  margin: 0;
+  max-width: 100%;
+  overflow: hidden;
+  background: white;
+  color: black;
+  border-radius: 15px;
+  border: 5px white solid;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.233);
+  transition: 0.2s all ease-in-out}
 
 .popularcard__image{
-    flex: 0 0 100px;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-}
+  height: 100%;
+  object-fit: cover;
+  width: 100px
+} 
 
 .popularcard__grade{
-    margin: 4rem 0 0.3em 0.75rem
+  margin: 4rem 0 0.3em 0.75rem
 }
 
 .popularcard:hover{
-    transform: scale(1.03);
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.644)
+  transform: scale(1.01);
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.644)
 }
 
 /* ACTIVITY */
-#activity{
-    display: flex;
-
-    margin: 4rem 0 3rem 0;
+.activity{
+  display: grid;
+  column-gap: 1.5rem;
+  margin: 2rem 0;
 }
-.activitymain{
-    flex-basis: 100%;;
+.activityTitle{
+  grid-column: -1/1;
 }
-
-.activitycards{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 2rem;
+.activityCard{
+    
+  border-radius: 1rem;
+  margin: 0;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.233);
+  transition: 0.2s all ease-in-out;
 }
-
-.activitycard{
-    display: flex;
-    flex-direction: column;
-    flex: 0 0 250px;
-    max-width: 550px;
-    overflow: hidden;
-    background: white;
-    color: black;
-    border-radius: 15px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.233);
-    transition: 0.3s all ease-in-out;
-
+.activityCard:hover{
+  transform: scale(1.01);
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.644);
 }
-.activitycard:hover{
-    transform: scale(1.04);
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.644)
+.activityCard__wrapimage{
+  position: relative;
+  flex: 1;
 }
-.activitycard__image{
-    flex: 0 0 350px;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+.activityCard__image{
+  position:  absolute;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
-
-.activitycard__title{
-    font-size: 1rem;
-    font-weight: bold;
-    margin: 1rem 0 1rem 1rem;
+.activityCard__Title{
+  margin: 1rem;
 }
-
-
+  
 /* FOOTER */
+footer{
+  background-color: #F2F2F2;}
 
 .footer_container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    width: 100%;
-    background-color: #F2F2F2;
-    padding: 2rem;
+  display: flex;
+  flex-wrap: wrap;
+  margin: auto;
+  justify-content: space-between;
+  max-width: 1440px;
+  background-color: #F2F2F2;
+  box-sizing: border-box;
 }
-ul {
-    list-style-type: none;
-    padding: 0;
+.footer_link{
+  padding: 0;
+}
+ul{
+  list-style-type: none;
+  padding: 0;
 }
 
 li{
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
+* { outline: 1px red solid !important; visibility: visible !important }
+/*RESPONSIVE*/
+
+@media (max-width: 1440px) {
+  #hosting{
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content:center ;
+    gap: 2.5rem;
+     height: auto;
+ }
+  .hostingpopular{
+    flex-direction: column;
+    justify-content: center;           
+  }
+  .popularcard{
+    display: flex;
+    max-width:100%;
+  }
+}  
+@media (max-width: 620px){
+
+  .hostingmain{
+    background-color: white;
+  }
+  .footer_container{
+    flex-direction: column;
+    padding: 2rem;
+  }
+}
+.activity {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 12rem 12rem 12rem 12rem 12rem 12rem;
+  }
+
+@media (min-width: 1100px){
+  .activity {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: auto 14rem 1.5rem 1.5rem 1.5rem 14rem;
+  }
+  .activityCard1{
+    grid-column: 1/2;
+    grid-row: 2/7;
+  }
+  .activityCard2{
+    grid-column: 2/3;
+    grid-row: 2/5;
+  }
+  .activityCard3{
+    grid-column: 3/4;
+    grid-row: 2/7;
+  }
+  .activityCard4{
+    grid-column: 4/5;
+    grid-row: 2/3;
+  }
+  .activityCard5{
+    grid-column: 2/3;
+    grid-row: 6/7;
+  }
+  .activityCard6{
+    grid-column: 4/5;
+    grid-row: 4/7;
+  }
+}
+
+@media (max-width: 1100px){
+  .activity {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto 12rem 12rem;
+    row-gap: 1.5rem;
+  }
+  }
+@media (max-width: 925px){
+  .activity {
+    padding: 2rem;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto 12rem 12rem 12rem;
+  }
+}
