--- a/style.css
+++ b/style.css
@@ -10,9 +10,12 @@ header{
   display: flex;
   flex-wrap: wrap;
   max-width: 1440px;
-  margin: 0px auto;
+  margin: 0px auto ;
 }
-
+.logo{
+  padding-top: 1.3rem;
+  height: 3rem
+}
 .headernav{
   flex: 1;
   display: flex;
@@ -29,6 +32,7 @@ header{
 }
 .signup{
   color: #0065FC;
+
   font-weight: 700;
   width: 162px;
   text-align: center;
@@ -72,6 +76,10 @@ nav a:focus{
   font-weight: bold;
   font-family: "Raleway", "Sans serif";
  }
+ ::placeholder{
+  color: black;
+  opacity: 1;}
+
  .search_button{
   background-color: #0065FC;
   color: white;
@@ -141,6 +149,9 @@ nav a:focus{
   margin-right: 0.5rem;
 }
 /* HOSTING */
+figure{
+  margin: 0;
+}
 #hosting{
     display: flex;
     gap: 2.5rem;
@@ -227,9 +238,8 @@ nav a:focus{
   flex-wrap: wrap;
   gap: 1.5rem;
 }
-.popularcard_content{
-  width: 100%;
-  display: inline-block;
+.popularfigure{
+  display: flex;
 }
 
 .popularcard{
@@ -237,11 +247,10 @@ nav a:focus{
   flex-direction: row;
   flex: 1 0 250px;
   margin: 0;
-  max-width: 100%;
   overflow: hidden;
   background: white;
   color: black;
-  border-radius: 15px;
+  border-radius: 20px;
   border: 5px white solid;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.233);
   transition: 0.2s all ease-in-out}
@@ -249,7 +258,7 @@ nav a:focus{
 .popularcard__image{
   height: 100%;
   object-fit: cover;
-  width: 100px
+  width: 100px;
 } 
 
 .popularcard__grade{
@@ -322,41 +331,10 @@ ul{
 li{
   margin-bottom: 1rem;
 }
+/* 
+* { outline: 1px red solid !important; visibility: visible !important } */
 
-* { outline: 1px red solid !important; visibility: visible !important }
 /*RESPONSIVE*/
-
-@media (max-width: 1440px) {
-  #hosting{
-    display: flex;
-    flex-direction: column-reverse;
-    justify-content:center ;
-    gap: 2.5rem;
-     height: auto;
- }
-  .hostingpopular{
-    flex-direction: column;
-    justify-content: center;           
-  }
-  .popularcard{
-    display: flex;
-    max-width:100%;
-  }
-}  
-@media (max-width: 620px){
-
-  .hostingmain{
-    background-color: white;
-  }
-  .footer_container{
-    flex-direction: column;
-    padding: 2rem;
-  }
-}
-.activity {
-    grid-template-columns: 1fr;
-    grid-template-rows: auto 12rem 12rem 12rem 12rem 12rem 12rem;
-  }
 
 @media (min-width: 1100px){
   .activity {
@@ -387,7 +365,28 @@ li{
     grid-column: 4/5;
     grid-row: 4/7;
   }
+  .search_icon{
+    display: none;
+  }
 }
+
+@media (max-width: 1440px) {
+  #hosting{
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content:center ;
+    gap: 2.5rem;
+     height: auto;
+ }
+  .hostingpopular{
+    flex-direction: column;
+    justify-content: center;           
+  }
+  .popularcard{
+    display: flex;
+    max-width:100%;
+  }
+}  
 
 @media (max-width: 1100px){
   .activity {
@@ -395,11 +394,60 @@ li{
     grid-template-rows: auto 12rem 12rem;
     row-gap: 1.5rem;
   }
+  .search_button_text{
+    display: none;
   }
+}
+
 @media (max-width: 925px){
   .activity {
     padding: 2rem;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: auto 12rem 12rem 12rem;
   }
+.activity {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 12rem 12rem 12rem 12rem 12rem 12rem;
+  }
+}
+@media (max-width: 620px){
+
+  .hostingmain{
+    background-color: white;
+  }
+  .footer_container{
+    flex-direction: column;
+    padding: 2rem;
+  }
+}
+
+@media (max-width: 475px){
+  /*HEADER*/
+  header{
+    justify-content: space-between;
+  }
+  .logo{
+    margin-left: 10px;
+  }
+  nav{
+    flex-basis: 100%;
+    order: 2;
+  }
+  nav a{
+    width: 50%;
+    padding-bottom: 10px;
+    text-align: center;
+    border-top: none;
+    border-bottom: 3px solid #F2F2F2;
+  }
+  nav a:focus{
+    color: #0065FC;
+    border-top: none;
+    border-bottom: 3px solid#0065FC;}
+
+  .signup{
+    order:1;
+  }
+  .info_availability_icon{
+    width: 2rem;
 }
