--- a/style.css
+++ b/style.css
@@ -111,7 +111,8 @@ nav a:focus{
   font-weight: bold;
 }
 .filter:hover{
-  background-color:#DEEBFF ;
+  background-color:#DEEBFF;
+  border: 2px solid #DEEBFF;
 }
 .Filter_name{
   margin: 0 1rem;
@@ -174,7 +175,7 @@ figure{
   overflow: hidden;
   background-color: white;
   border: 5px white solid;
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.233);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.233);
   transition: 0.2s all ease-in-out
 }
 .card:hover{
@@ -239,7 +240,7 @@ figure{
   color: black;
   border-radius: 20px;
   border: 5px white solid;
-  box-shadow: 2px 1px 10px rgba(0, 0, 0, 0.233);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.233);
   transition: 0.2s all ease-in-out;
 }
 .popularcard_content{
@@ -287,7 +288,7 @@ figure{
   overflow: hidden;
   display: flex;
   flex-direction: column;
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.233);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.233);
   transition: 0.2s all ease-in-out;
 }
 .activityCard:hover{
@@ -315,7 +316,7 @@ footer{
 }
 .footer_content{
   width: 30%;
-  padding: 1rem 1rem 0rem 0rem;
+  padding: 1rem 1rem 1rem 0rem;
 }
 .footer_container{
   display: flex;
@@ -462,6 +463,11 @@ li{
     flex: 1;
   }
   ::placeholder{
-    padding: 1rem;
+    padding: 0.5rem;
   }
+}
+@media screen and (max-width: 330px){
+  ::placeholder{
+    font-size: 15px;
+    padding: 0.5rem;
 }
