correction de flexbox sur hosting

--- a/style.css
+++ b/style.css
@@ -158,6 +158,7 @@ figure{
   background-color: #F2F2F2;
   border-radius: 10px;
   padding: 0.6rem 2rem 2rem 2rem;
+  flex: 3;
 }
 .hostingcards{
   display: flex;
@@ -218,19 +219,19 @@ figure{
   background-color: #F2F2F2;
   border-radius: 10px;
   padding: 0.6rem 2rem 2rem 2rem;
+  flex: 1;
 }
 .popular_cards{
   display: flex;
   flex-wrap: wrap;
   gap: 1.5rem;
-  width: fit-content;
 }
 .popularfigure{
   display: flex;
 }
 .popularcard{
   display: flex;
-  flex: 1 0 250px;
+  flex: 1 0 225px;
   margin: 0;
   overflow: hidden;
   background: white;
