--- a/style.css
+++ b/style.css
@@ -1,3 +1,30 @@
+/* HELPER CLASSES */
+.flex{
+  display: flex
+}
+.flex-wrap{
+  display: flex;
+  flex-wrap: wrap;
+}
+.flex-column{
+  display: flex;
+  flex-direction: column;
+}
+.align-center{
+  display: flex;
+  align-items: center;
+}
+.justify-center{
+  display: flex;
+  justify-content: center;
+}
+.align-justify-center{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+/* /HELPER CLASSES */
+
 body{
   font-family: 'Raleway', sans-serif;
   margin: 0;
@@ -9,8 +36,6 @@ main{
 
 /* HEADER */
 header{
-  display: flex;
-  flex-wrap: wrap;
   max-width: 1440px;
   margin: 0px auto ;
 }
@@ -20,9 +45,7 @@ header{
 }
 .headernav{
   flex: 1;
-  display: flex;
   justify-content: flex-end;
-  align-items: center;
 }
  nav a{
   width: 162px;
@@ -45,15 +68,12 @@ a{
   color: black;
   text-decoration: none;
 }
-nav a:focus{
+header nav a:focus, header nav a:hover{
   color: #0065FC;
   border-top: 3px solid#0065FC;
 }
 
 /* SEARCH */
- .search_bar{
-  display: flex;
- }
  .searchicon{
   background-color: #F2F2F2;
   padding: 1rem 1.25rem;
@@ -91,17 +111,11 @@ nav a:focus{
 .filter_title{
   margin-right: 2rem;
   margin: 0 2rem 1rem 0;
-  display: flex;
-  align-items: center;
 }
 .search_filters{
-  display: flex;
   margin-top: 2rem;
-  flex-wrap: wrap;
 }
 .filter{
-  display: flex;
-  align-items: center;
   margin-right: 2rem;
   border: 2px solid #d9d9d9;
   border-radius: 2rem;
@@ -123,19 +137,10 @@ nav a:focus{
   border-radius: 100%;
   height: 3rem;
   width: 3rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   margin: -2px;
 }
-.info_availability{
-  display: flex;
-  align-items: center;
-}
+
 .info_availability_icon{
-  display: flex;
-  align-items: center;
-  justify-content: center;
   color: #0065FC;
   border: 1px solid #d9d9d9;
   height: 1.5rem;
@@ -153,16 +158,12 @@ figure{
   gap: 2.5rem;
 }
 .hostingmain{
-  display: flex;
-  flex-wrap: wrap;
   background-color: #F2F2F2;
   border-radius: 10px;
   padding: 0.6rem 2rem 2rem 2rem;
   flex: 3;
 }
 .hostingcards{
-  display: flex;
-  flex-wrap: wrap;
   gap: 1.5rem;
 }
 .card{
@@ -212,7 +213,6 @@ figure{
 
 /* popular */
 .populartitle{
-  display: flex;
   justify-content: space-between
 }
 .popularmain{
@@ -222,15 +222,10 @@ figure{
   flex: 1;
 }
 .popular_cards{
-  display: flex;
-  flex-wrap: wrap;
   gap: 1.5rem;
 }
-.popularfigure{
-  display: flex;
-}
+
 .popularcard{
-  display: flex;
   flex: 1 0 225px;
   margin: 0;
   overflow: hidden;
@@ -241,16 +236,13 @@ figure{
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.233);
   transition: 0.2s all ease-in-out;
 }
-.popularcard_content{
-  display: flex;
-}
+
 .popularcard__image{
   height: 100%;
   object-fit: cover;
   width: 110px;
 }
 .popular_link{
-  display: flex;
   flex-direction: column;
 }
 .popularcard__price{
@@ -284,7 +276,6 @@ figure{
   border-radius: 1rem;
   margin: 0;
   overflow: hidden;
-  display: flex;
   flex-direction: column;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.233);
   transition: 0.2s all ease-in-out;
@@ -317,8 +308,6 @@ footer{
   padding: 1rem 1rem 1rem 0rem;
 }
 .footer_container{
-  display: flex;
-  flex-wrap: wrap;
   justify-content: space-between;
   margin: auto;
   max-width: 100%;
@@ -337,8 +326,6 @@ ul{
 li{
   margin-bottom: 1rem;
 }
-
-/* * { outline: 1px red solid !important; visibility: visible !important } */
 
 /*RESPONSIVE*/
 
@@ -413,26 +400,8 @@ li{
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: auto 12rem 12rem 12rem;
   }
-.activity {
-    grid-template-columns: 1fr;
-    grid-template-rows: auto 12rem 12rem 12rem 12rem 12rem 12rem;
-  }
-}
-@media screen and (max-width: 620px){
 
-  .hostingmain{
-    background-color: white;
-  }
-  .footer_container{
-    flex-direction: column;
-    padding: 2rem;
-  }
-  .footer_content{
-    padding: 0;
-    width: 100%;
-  }
-}
-@media screen and (max-width: 600px){
+@media screen and (max-width: 610px){
   /*HEADER*/
   header{
     justify-content: space-between;
@@ -450,7 +419,7 @@ li{
     border-top: none;
     border-bottom: 3px solid #F2F2F2;
   }
-  nav a:focus{
+  header nav a:focus, header nav a:hover{
     color: #0065FC;
     border-top: none;
     border-bottom: 3px solid#0065FC;
@@ -462,6 +431,21 @@ li{
   }
   ::placeholder{
     padding: 0.5rem;
+  }
+  .hostingmain{
+    background-color: white;
+  }
+  .activity {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 12rem 12rem 12rem 12rem 12rem 12rem;
+  }
+  .footer_container{
+    flex-direction: column;
+    padding: 2rem;
+  }
+  .footer_content{
+    padding: 0;
+    width: 100%;
   }
 }
 @media screen and (max-width: 370px){
